// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update update an existing spec with prefixed server 1`] = `
"[33m[1moptic update is deprecated. Start using the new capture flow by running optic capture openapi.yml --update (read the docs <TODO>)[22m[39m
[94m» [39mDocumenting new operations...
  [32madded[39m  post /books
  [32madded[39m  get /books
  [32madded[39m  post /authors
  [32madded[39m  get /some/example
  [32madded[39m  get /books/{book}
  [32madded[39m  get /authors/{author}
[94m» [39mUpdating operations...

[1G[1A[0K[1G[1B
Share a link to documentation with your team ([1moptic api add openapi.yml)[22m
"
`;

exports[`update update an existing spec with prefixed server 2`] = `
{
  "components": {
    "schemas": {
      "GetBooksBook200ResponseBody": {
        "properties": {
          "author_id": {
            "type": "string",
          },
          "created_at": {
            "type": "string",
          },
          "id": {
            "type": "string",
          },
          "name": {
            "type": "string",
          },
          "updated_at": {
            "type": "string",
          },
        },
        "required": [
          "id",
          "name",
          "author_id",
          "created_at",
          "updated_at",
        ],
        "type": "object",
      },
      "GetSomeExample200ResponseBody": {
        "properties": {
          "something": {
            "items": {
              "properties": {
                "another": {
                  "oneOf": [
                    {
                      "items": {
                        "properties": {
                          "max": {
                            "type": "number",
                          },
                          "min": {
                            "type": "number",
                          },
                          "path": {
                            "type": "string",
                          },
                        },
                        "required": [
                          "path",
                          "max",
                          "min",
                        ],
                        "type": "object",
                      },
                      "type": [
                        "object",
                        "null",
                      ],
                    },
                    {
                      "items": {
                        "properties": {
                          "max": {
                            "type": "number",
                          },
                          "min": {
                            "type": "number",
                          },
                          "path": {
                            "type": "string",
                          },
                        },
                        "required": [
                          "path",
                          "max",
                          "min",
                        ],
                        "type": "object",
                      },
                      "type": "array",
                    },
                  ],
                },
                "name": {
                  "type": "string",
                },
              },
              "required": [
                "name",
                "another",
              ],
              "type": "object",
            },
            "type": "array",
          },
        },
        "required": [
          "something",
        ],
        "type": "object",
      },
      "PostAuthors201ResponseBody": {
        "properties": {
          "id": {
            "type": "string",
          },
          "name": {
            "type": "string",
          },
        },
        "required": [
          "id",
          "name",
        ],
        "type": "object",
      },
      "PostAuthorsRequestBody": {
        "properties": {
          "name": {
            "type": "string",
          },
        },
        "required": [
          "name",
        ],
        "type": "object",
      },
      "PostBooks201ResponseBody": {
        "properties": {
          "author_id": {
            "type": "string",
          },
          "id": {
            "type": "string",
          },
          "name": {
            "type": "string",
          },
        },
        "required": [
          "id",
          "name",
          "author_id",
        ],
        "type": "object",
      },
      "PostBooksRequestBody": {
        "properties": {
          "author_id": {
            "type": "string",
          },
          "name": {
            "type": "string",
          },
        },
        "required": [
          "name",
          "author_id",
        ],
        "type": "object",
      },
    },
  },
  "info": {
    "description": "The API",
    "title": "a spec",
    "version": "0.1.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/authors": {
      "post": {
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/PostAuthorsRequestBody",
              },
            },
          },
        },
        "responses": {
          "201": {
            "content": {
              "application/json; charset=utf-8": {
                "schema": {
                  "$ref": "#/components/schemas/PostAuthors201ResponseBody",
                },
              },
            },
            "description": "201 response",
          },
        },
      },
    },
    "/authors/{author}": {
      "get": {
        "responses": {
          "200": {
            "content": {
              "application/json; charset=utf-8": {
                "schema": {
                  "$ref": "#/components/schemas/GetBooksBook200ResponseBody",
                },
              },
            },
            "description": "200 response",
          },
        },
      },
      "parameters": [
        {
          "in": "path",
          "name": "author",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
    },
    "/books": {
      "get": {
        "responses": {
          "200": {
            "content": {
              "application/json; charset=utf-8": {
                "schema": {
                  "properties": {
                    "data": {
                      "items": {
                        "$ref": "#/components/schemas/GetBooksBook200ResponseBody",
                      },
                      "type": "array",
                    },
                    "has_more_data": {
                      "type": "boolean",
                    },
                    "next": {
                      "type": "null",
                    },
                  },
                  "required": [
                    "data",
                    "next",
                    "has_more_data",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "200 response",
          },
        },
      },
      "post": {
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/PostBooksRequestBody",
              },
            },
          },
        },
        "responses": {
          "201": {
            "content": {
              "application/json; charset=utf-8": {
                "schema": {
                  "$ref": "#/components/schemas/PostBooks201ResponseBody",
                },
              },
            },
            "description": "201 response",
          },
        },
      },
    },
    "/books/{book}": {
      "get": {
        "responses": {
          "200": {
            "content": {
              "application/json; charset=utf-8": {
                "schema": {
                  "$ref": "#/components/schemas/GetBooksBook200ResponseBody",
                },
              },
            },
            "description": "200 response",
          },
        },
      },
      "parameters": [
        {
          "in": "path",
          "name": "book",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
    },
    "/some/example": {
      "get": {
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/GetSomeExample200ResponseBody",
                },
              },
            },
            "description": "200 response",
          },
        },
      },
    },
  },
  "servers": [
    {
      "name": "book server",
      "url": "http://localhost:3030/api",
    },
  ],
}
`;

exports[`update updates an empty spec 1`] = `
"[33m[1moptic update is deprecated. Start using the new capture flow by running optic capture openapi.yml --update (read the docs <TODO>)[22m[39m
[94m» [39mDocumenting new operations...
  [32madded[39m  post /books
  [32madded[39m  get /books
  [32madded[39m  post /authors
  [32madded[39m  get /some/example
  [32madded[39m  get /books/{book}
  [32madded[39m  get /authors/{author}
[94m» [39mUpdating operations...

[1G[1A[0K[1G[1B
Share a link to documentation with your team ([1moptic api add openapi.yml)[22m
"
`;

exports[`update updates an empty spec 2`] = `
{
  "components": {
    "schemas": {
      "GetBooksBook200ResponseBody": {
        "properties": {
          "author_id": {
            "type": "string",
          },
          "created_at": {
            "type": "string",
          },
          "id": {
            "type": "string",
          },
          "name": {
            "type": "string",
          },
          "updated_at": {
            "type": "string",
          },
        },
        "required": [
          "id",
          "name",
          "author_id",
          "created_at",
          "updated_at",
        ],
        "type": "object",
      },
      "GetSomeExample200ResponseBody": {
        "properties": {
          "something": {
            "items": {
              "properties": {
                "another": {
                  "oneOf": [
                    {
                      "items": {
                        "properties": {
                          "max": {
                            "type": "number",
                          },
                          "min": {
                            "type": "number",
                          },
                          "path": {
                            "type": "string",
                          },
                        },
                        "required": [
                          "path",
                          "max",
                          "min",
                        ],
                        "type": "object",
                      },
                      "type": [
                        "object",
                        "null",
                      ],
                    },
                    {
                      "items": {
                        "properties": {
                          "max": {
                            "type": "number",
                          },
                          "min": {
                            "type": "number",
                          },
                          "path": {
                            "type": "string",
                          },
                        },
                        "required": [
                          "path",
                          "max",
                          "min",
                        ],
                        "type": "object",
                      },
                      "type": "array",
                    },
                  ],
                },
                "name": {
                  "type": "string",
                },
              },
              "required": [
                "name",
                "another",
              ],
              "type": "object",
            },
            "type": "array",
          },
        },
        "required": [
          "something",
        ],
        "type": "object",
      },
      "PostAuthors201ResponseBody": {
        "properties": {
          "id": {
            "type": "string",
          },
          "name": {
            "type": "string",
          },
        },
        "required": [
          "id",
          "name",
        ],
        "type": "object",
      },
      "PostAuthorsRequestBody": {
        "properties": {
          "name": {
            "type": "string",
          },
        },
        "required": [
          "name",
        ],
        "type": "object",
      },
      "PostBooks201ResponseBody": {
        "properties": {
          "author_id": {
            "type": "string",
          },
          "id": {
            "type": "string",
          },
          "name": {
            "type": "string",
          },
        },
        "required": [
          "id",
          "name",
          "author_id",
        ],
        "type": "object",
      },
      "PostBooksRequestBody": {
        "properties": {
          "author_id": {
            "type": "string",
          },
          "name": {
            "type": "string",
          },
        },
        "required": [
          "name",
          "author_id",
        ],
        "type": "object",
      },
    },
  },
  "info": {
    "description": "The API",
    "title": "a spec",
    "version": "0.1.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/authors": {
      "post": {
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/PostAuthorsRequestBody",
              },
            },
          },
        },
        "responses": {
          "201": {
            "content": {
              "application/json; charset=utf-8": {
                "schema": {
                  "$ref": "#/components/schemas/PostAuthors201ResponseBody",
                },
              },
            },
            "description": "201 response",
          },
        },
      },
    },
    "/authors/{author}": {
      "get": {
        "responses": {
          "200": {
            "content": {
              "application/json; charset=utf-8": {
                "schema": {
                  "$ref": "#/components/schemas/GetBooksBook200ResponseBody",
                },
              },
            },
            "description": "200 response",
          },
        },
      },
      "parameters": [
        {
          "in": "path",
          "name": "author",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
    },
    "/books": {
      "get": {
        "responses": {
          "200": {
            "content": {
              "application/json; charset=utf-8": {
                "schema": {
                  "properties": {
                    "data": {
                      "items": {
                        "$ref": "#/components/schemas/GetBooksBook200ResponseBody",
                      },
                      "type": "array",
                    },
                    "has_more_data": {
                      "type": "boolean",
                    },
                    "next": {
                      "type": "null",
                    },
                  },
                  "required": [
                    "data",
                    "next",
                    "has_more_data",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "200 response",
          },
        },
      },
      "post": {
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/PostBooksRequestBody",
              },
            },
          },
        },
        "responses": {
          "201": {
            "content": {
              "application/json; charset=utf-8": {
                "schema": {
                  "$ref": "#/components/schemas/PostBooks201ResponseBody",
                },
              },
            },
            "description": "201 response",
          },
        },
      },
    },
    "/books/{book}": {
      "get": {
        "responses": {
          "200": {
            "content": {
              "application/json; charset=utf-8": {
                "schema": {
                  "$ref": "#/components/schemas/GetBooksBook200ResponseBody",
                },
              },
            },
            "description": "200 response",
          },
        },
      },
      "parameters": [
        {
          "in": "path",
          "name": "book",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
    },
    "/some/example": {
      "get": {
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/GetSomeExample200ResponseBody",
                },
              },
            },
            "description": "200 response",
          },
        },
      },
    },
  },
}
`;

exports[`update updates an existing spec 1`] = `
"[33m[1moptic update is deprecated. Start using the new capture flow by running optic capture openapi.yml --update (read the docs <TODO>)[22m[39m
[94m» [39mDocumenting new operations...
  [32madded[39m  post /books
  [32madded[39m  get /books
  [32madded[39m  post /authors
  [32madded[39m  get /some/example
  [32madded[39m  get /books/{book}
  [32madded[39m  get /authors/{author}
[94m» [39mUpdating operations...

[1G[1A[0K[1G[1B
Share a link to documentation with your team ([1moptic api add openapi.yml)[22m
"
`;

exports[`update updates an existing spec 2`] = `
{
  "components": {
    "schemas": {
      "GetBooksBook200ResponseBody": {
        "properties": {
          "author_id": {
            "type": "string",
          },
          "created_at": {
            "type": "string",
          },
          "id": {
            "type": "string",
          },
          "name": {
            "type": "string",
          },
          "updated_at": {
            "type": "string",
          },
        },
        "required": [
          "id",
          "name",
          "author_id",
          "created_at",
          "updated_at",
        ],
        "type": "object",
      },
      "GetSomeExample200ResponseBody": {
        "properties": {
          "something": {
            "items": {
              "properties": {
                "another": {
                  "oneOf": [
                    {
                      "items": {
                        "properties": {
                          "max": {
                            "type": "number",
                          },
                          "min": {
                            "type": "number",
                          },
                          "path": {
                            "type": "string",
                          },
                        },
                        "required": [
                          "path",
                          "max",
                          "min",
                        ],
                        "type": "object",
                      },
                      "type": [
                        "object",
                        "null",
                      ],
                    },
                    {
                      "items": {
                        "properties": {
                          "max": {
                            "type": "number",
                          },
                          "min": {
                            "type": "number",
                          },
                          "path": {
                            "type": "string",
                          },
                        },
                        "required": [
                          "path",
                          "max",
                          "min",
                        ],
                        "type": "object",
                      },
                      "type": "array",
                    },
                  ],
                },
                "name": {
                  "type": "string",
                },
              },
              "required": [
                "name",
                "another",
              ],
              "type": "object",
            },
            "type": "array",
          },
        },
        "required": [
          "something",
        ],
        "type": "object",
      },
      "PostAuthors201ResponseBody": {
        "properties": {
          "id": {
            "type": "string",
          },
          "name": {
            "type": "string",
          },
        },
        "required": [
          "id",
          "name",
        ],
        "type": "object",
      },
      "PostAuthorsRequestBody": {
        "properties": {
          "name": {
            "type": "string",
          },
        },
        "required": [
          "name",
        ],
        "type": "object",
      },
      "PostBooks201ResponseBody": {
        "properties": {
          "author_id": {
            "type": "string",
          },
          "id": {
            "type": "string",
          },
          "name": {
            "type": "string",
          },
        },
        "required": [
          "id",
          "name",
          "author_id",
        ],
        "type": "object",
      },
      "PostBooksRequestBody": {
        "properties": {
          "author_id": {
            "type": "string",
          },
          "name": {
            "type": "string",
          },
        },
        "required": [
          "name",
          "author_id",
        ],
        "type": "object",
      },
    },
  },
  "info": {
    "description": "The API",
    "title": "a spec",
    "version": "0.1.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/authors": {
      "post": {
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/PostAuthorsRequestBody",
              },
            },
          },
        },
        "responses": {
          "201": {
            "content": {
              "application/json; charset=utf-8": {
                "schema": {
                  "$ref": "#/components/schemas/PostAuthors201ResponseBody",
                },
              },
            },
            "description": "201 response",
          },
        },
      },
    },
    "/authors/{author}": {
      "get": {
        "responses": {
          "200": {
            "content": {
              "application/json; charset=utf-8": {
                "schema": {
                  "$ref": "#/components/schemas/GetBooksBook200ResponseBody",
                },
              },
            },
            "description": "200 response",
          },
        },
      },
      "parameters": [
        {
          "in": "path",
          "name": "author",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
    },
    "/books": {
      "get": {
        "responses": {
          "200": {
            "content": {
              "application/json; charset=utf-8": {
                "schema": {
                  "properties": {
                    "data": {
                      "items": {
                        "$ref": "#/components/schemas/GetBooksBook200ResponseBody",
                      },
                      "type": "array",
                    },
                    "has_more_data": {
                      "type": "boolean",
                    },
                    "next": {
                      "type": "null",
                    },
                  },
                  "required": [
                    "data",
                    "next",
                    "has_more_data",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "200 response",
          },
        },
      },
      "post": {
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/PostBooksRequestBody",
              },
            },
          },
        },
        "responses": {
          "201": {
            "content": {
              "application/json; charset=utf-8": {
                "schema": {
                  "$ref": "#/components/schemas/PostBooks201ResponseBody",
                },
              },
            },
            "description": "201 response",
          },
        },
      },
    },
    "/books/{book}": {
      "get": {
        "responses": {
          "200": {
            "content": {
              "application/json; charset=utf-8": {
                "schema": {
                  "$ref": "#/components/schemas/GetBooksBook200ResponseBody",
                },
              },
            },
            "description": "200 response",
          },
        },
      },
      "parameters": [
        {
          "in": "path",
          "name": "book",
          "required": true,
          "schema": {
            "type": "string",
          },
        },
      ],
    },
    "/some/example": {
      "get": {
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/GetSomeExample200ResponseBody",
                },
              },
            },
            "description": "200 response",
          },
        },
      },
    },
  },
}
`;
